# tom

./: .gitignore  CLAUDE.md  CONFIGURATION.md  CONVENTIONS.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
docs/: OVERVIEW.md  architecture.md  attachments.md  cli.md  configuration.md  getting-started.md  issue-lifecycle.md  patrol.md  plan.md  prompts.md  retro.md  templates.md
docs/agents/: analyst.md  dev.md  pm.md  review.md
src/tom/: agents.py  attachments.py  cli.py  config.py  github.py  labels.py  log.py  models.py  patrol.py  process.py  prompts.py  retro.py  schemas.py  worktree.py
tests/: test_agents.py  test_attachments.py  test_cli.py  test_config.py  test_github.py  test_labels.py  test_patrol.py  test_process.py  test_retro.py  test_worktree.py
