[project]
name = "tom"
version = "0.1.0"
description = "Triage. Orchestrate. Manage. — An autonomous software development daemon."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
tom = "tom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
